component in separate file

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 
     <div id="components-demo">
         <button-counter title="Anders" more="B"></button-counter> <br>
-        <button-counter title="Anoter" more="Button"></button-counter>
+        <button-counter title="Yet another" more="Button"></button-counter>
     </div>
     <script src="js/index.js"></script>
+    <script src="js/buttoncounter.js"></script>
 </body>
 
 </html>
