--- a/index.html
+++ b/index.html
@@ -19,19 +19,20 @@
         <div>
             <hello name="Jens"></hello>
         </div>
-        <button-counter from="7"></button-counter> <br>
         <button-counter></button-counter>
+        <button-counter from="7"></button-counter> <br>
+       
         <div>
             <say-hello></say-hello>
         </div>
-        <button-counter></button-counter>
+    
 
         <h2>calculator</h2>
         <calculator></calculator>
+        <br>
+        <h2>Collect words</h2>
         <collect-words></collect-words>
     </div>
-
-    <a href="anotherpage.html">Another page</a>
 
     <script src="js/index.js"></script>
     <script src="js/componentExamples.js"></script>
