--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
 <body>
     <h1>Vue component examples</h1>
-    <div id="app">
-        {{name}}
-    </div>
 
     <div id="components-demo">
+        <h2>Component hello</h2>
         <div>
             <hello name="Jens"></hello>
         </div>
+
+        <h2>Component button-counter</h2>
         <button-counter></button-counter>
         <button-counter from="7"></button-counter> <br>
 
@@ -26,7 +26,7 @@
             <say-hello></say-hello>
         </div>
 
-        <h2>calculator</h2>
+        <h2>Calculator</h2>
         <calculator></calculator>
         <br>
         <h2>Collect words</h2>
